# SMEE

./: .gitignore  data.json  pyproject.toml  results_emb-large-3.xlsx
embedding_test/: embedding.py  test_strings.py
